@@ -4,3 +4,4 @@ namespace MobilizonConnector;
 const DEFAULT_EVENTS_COUNT = 5;
 const NAME = '<wordpress-name>';
 const NICE_NAME = '<wordpress-nice-name>';
+const PLUGIN_VERSION = '<wordpress-version>';
